<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlurTestActivity">

    <Button
        android:id="@+id/btn_blur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blurry"
        android:textAllCaps="false"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cartoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cartoon"
        android:textAllCaps="false"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toTopOf="@+id/image_view_ori"
        app:layout_constraintEnd_toStartOf="@+id/btn_larger_view"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toEndOf="@+id/btn_blur"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <Button
        android:id="@+id/btn_larger_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/large_view"
        android:textAllCaps="false"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_ori"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_blu"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="340dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/image_view_ori" />

    <android.opengl.GLSurfaceView
        android:id="@+id/gl_surface_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854" />


</androidx.constraintlayout.widget.ConstraintLayout>